Renamed to dice2bip39. bip39-dice was taken. Disabled auto gen define that's used for testing only.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
 			"name": "Launch GDB",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/build/bip39dice",
+			"program": "${workspaceFolder}/build/dice2bip39",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/build",
@@ -32,7 +32,7 @@
 			"name": "Launch Windows",
 			"type": "cppvsdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/build/bip39dice.exe",
+			"program": "${workspaceFolder}/build/dice2bip39.exe",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/build",
