dice2bip39 now compiles, links, and passes all self-tests (including the BIP39 test vectors) on ARM32. Specifically on a Raspberry Pi 3b board. This means the SHA256 implementation is good for 32 bits as well as all the 256 and 512 bit integer types used for creating the bip39 words.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,7 @@ target_link_libraries(
 		# building from bash.
 		$<$<PLATFORM_ID:Linux>:m>
 		$<$<PLATFORM_ID:Linux>:stdc++>
+		$<$<PLATFORM_ID:Linux>:stdc++fs>
 		$<$<PLATFORM_ID:Windows>:shlwapi.lib>
 )
 
