Dictionaries in a Bip39::Distionary namespace. Implemented a string input method that will eventually validate against dictionary.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,8 @@ FetchContent_MakeAvailable(tacent)
 add_executable(
 	${PROJECT_NAME}
 	Src/Version.cpp
+	Src/Dictionary.h
+	Src/Dictionary.cpp
 	Src/BipMain.cpp
 	Src/Version.cmake.h
 )
