--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ function(common_tool_configuration PROJNAME)
 	target_include_directories(
 		"${PROJNAME}"
 		PRIVATE
-			${CMAKE_CURRENT_SOURCE_DIR}/src
+			${CMAKE_CURRENT_SOURCE_DIR}/Src
 			$<TARGET_PROPERTY:Foundation,INTERFACE_INCLUDE_DIRECTORIES>
 			$<TARGET_PROPERTY:Math,INTERFACE_INCLUDE_DIRECTORIES>
 			$<TARGET_PROPERTY:System,INTERFACE_INCLUDE_DIRECTORIES>
