--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,8 @@ FetchContent_Declare(
 	GIT_REPOSITORY https://github.com/bluescan/tacent.git
 	# GIT_TAG v0.8.12
 	# GIT_TAG F9B2E08A6391290BC42D77C604CC4D47EBC79EB
-	GIT_TAG 03D73FA70E9D15A8B92CF19717A9B6352227D2A7
+	# GIT_TAG 03D73FA70E9D15A8B92CF19717A9B6352227D2A7
+	GIT_TAG 216e227f4a8472470bc579d26620842ae2a30aba
 )
 FetchContent_MakeAvailable(tacent)
 
