--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,8 @@ FetchContent_Declare(
 	# GIT_TAG 03D73FA70E9D15A8B92CF19717A9B6352227D2A7
 	# GIT_TAG 216e227f4a8472470bc579d26620842ae2a30aba
 	# GIT_TAG ce021c39c53e1a407688046d9505b468ad5b4cc2
-	GIT_TAG d8b2720f9bcad656d7e88f6b135a8a9700af4250
+	# GIT_TAG d8b2720f9bcad656d7e88f6b135a8a9700af4250
+	GIT_TAG 8bcf2f024688935122ab4d1f255bd26100025bfb
 )
 FetchContent_MakeAvailable(tacent)
 
