Specify git tag for tacent and update string function calls.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ include(FetchContent)
 FetchContent_Declare(
 	tacent
 	GIT_REPOSITORY https://github.com/bluescan/tacent.git
+	GIT_TAG 4fc52d51ae2885465d688555f3e395eaa4857cbb
 	# GIT_TAG v0.8.16
 	# GIT_TAG v0.8.12
 	# GIT_TAG F9B2E08A6391290BC42D77C604CC4D47EBC79EB
